<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <LinearLayout style="@style/buttons">
        <EditText android:id="@+id/txtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/noToSearch"
            android:layout_weight="1"
            />
        <ImageView
            style="@style/button_picture"
            android:layout_width="match_parent"
            android:src="@mipmap/ic_search"
            android:onClick="btnSearch"
            android:layout_weight="6"
            />
    </LinearLayout>
    <View style="@style/line" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        >
        <TextView style="@style/label" android:text="@string/noDept" />
        <EditText android:id="@+id/txtNoDept" style="@style/input" />
        <TextView style="@style/label" android:text="@string/noRegion" />
        <EditText android:id="@+id/txtNoRegion" style="@style/input" />
        <TextView style="@style/label" android:text="@string/nomRegion" />
        <EditText android:id="@+id/txtNomRegion" style="@style/input" android:enabled="false" />
        <TextView style="@style/label" android:text="@string/nomDept" />
        <EditText android:id="@+id/txtNom" style="@style/input" />
        <TextView style="@style/label" android:text="@string/nomStdDept" />
        <EditText android:id="@+id/txtNomStd" style="@style/input" />
        <TextView style="@style/label" android:text="@string/areaDept" />
        <EditText android:id="@+id/txtSurface" style="@style/input" />
        <TextView style="@style/label" android:text="@string/createdDateDept" />
        <EditText android:id="@+id/txtDateCreation" style="@style/input" />
        <TextView style="@style/label" android:text="@string/capitalDept" />
        <EditText android:id="@+id/txtChefLieu" style="@style/input" />
        <TextView style="@style/label" android:text="@string/urlDept" />
        <EditText
            android:id="@+id/txtUrlWiki"
            style="@style/input"
            />
    </GridLayout>

    <LinearLayout

        style="@style/buttons"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivAdd"
            style="@style/button_picture"
            android:src="@mipmap/ic_add"
            android:onClick="btnAdd"
            />
        <ImageView
            android:id="@+id/ivDelete"
            style="@style/button_picture"
            android:src="@mipmap/ic_delete"
            android:onClick="btnDelete"
            />
        <ImageView
            android:id="@+id/ivSave"
            style="@style/button_picture"
            android:src="@mipmap/ic_save"
            android:onClick="btnSave"
            />
    </LinearLayout>
</LinearLayout>